<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="25dp"
    tools:context=".fragment.BookViewFragment">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toTopOf="@+id/btnBuyNow"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="500dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_book_container"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/ivBookImage"
                        android:layout_width="wrap_content"
                        android:layout_height="270dp"
                        android:layout_marginTop="30dp"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/book_cover_desc"
                        android:scaleType="fitCenter"
                        app:shapeAppearanceOverlay="@style/RoundedImage"
                        app:layout_constraintBottom_toTopOf="@+id/tvBookTitle"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:src="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/tvBookAuthor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="68dp"
                        tools:text="@string/author_preview"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.498"
                        app:layout_constraintStart_toStartOf="parent" />

                    <androidx.appcompat.widget.AppCompatRatingBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:numStars="5"
                        android:scaleX="0.5"
                        android:scaleY="0.5"
                        android:stepSize="0.5"
                        android:rating="3"
                        android:progressTint="@color/rating_star"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.495"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvBookAuthor" />

                    <TextView
                        android:id="@+id/tvBookTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        tools:text="@string/app_name"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        app:layout_constraintTop_toBottomOf="@id/ivBookImage"
                        android:gravity="center"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/tvBookAuthor"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.498"
                        app:layout_constraintStart_toStartOf="parent" />

                    <ImageView
                        android:id="@+id/btnBack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:padding="10dp"
                        android:background="@drawable/white_round_bg"
                        android:contentDescription="@string/back_icon_desc"
                        android:src="@drawable/arrow_back_ios_24px"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/ivBookmarked"
                        android:layout_width="42dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:padding="10dp"
                        android:contentDescription="@string/bookmark_icon_desc"
                        android:src="@drawable/bookmark_24px"
                        android:background="@drawable/white_round_bg"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/tvHeadingDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/description"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

                <TextView
                    android:id="@+id/tvBookPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textColor="@color/price_text"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvHeadingDesc"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/tvBookDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:textSize="18sp"
                    tools:text="@string/description"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvHeadingDesc" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/layoutQty"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/bg_qty"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="36dp"
                android:text="@string/qty"
                android:textColor="@color/text_primary_dark"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/btnMinus"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/decrease_quantity_desc"
                android:src="@drawable/remove_24px"
                app:tint="@color/icon_muted" />

            <TextView
                android:id="@+id/tvQuantity"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/quantity_default"
                android:textAlignment="center"
                android:textColor="@color/quantity_text"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/btnPlus"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/increase_quantity_desc"
                android:src="@drawable/add_24px" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBuyNow"
            android:layout_width="0dp"
            android:layout_height="57dp"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/buy_button"
            android:text="@string/buy_now"
            android:textSize="18sp"
            app:cornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/layoutQty" />



</androidx.constraintlayout.widget.ConstraintLayout>
