<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/navbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                app:layout_constraintBottom_toTopOf="@+id/tvShowAll"
                app:layout_constraintTop_toTopOf="parent">


                <ImageView
                    android:id="@+id/ivMenu"
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/menu_24px"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvExplore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/explore"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ivSearch"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/search_24px" />

                <com.google.android.material.search.SearchBar
                    android:id="@+id/searchBar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/white"
                    android:hint="@string/search_books"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvYourInterest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_interest"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@id/rvYourInterest"
                android:textStyle="bold"
                android:textSize="23sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/navbar" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvYourInterest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:paddingHorizontal="8dp"
                app:spanCount="2"
                android:clipToPadding="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvYourInterest"
                tools:layoutManager="LinearLayoutManager"
                tools:listitem="@layout/book_layout"
                tools:orientation="horizontal" />

            <TextView
                android:id="@+id/tvBestSellers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bestseller"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:textSize="23sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvYourInterest" />

            <View
                android:id="@+id/vSeparator"
                android:layout_width="70dp"
                android:layout_height="3dp"
                android:layout_marginStart="16dp"
                android:background="@color/green"
                app:layout_constraintTop_toBottomOf="@+id/tvBestSellers"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvBestSellers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:layout_marginHorizontal="8dp"
                android:clipToPadding="false"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vSeparator"
                app:layout_constraintVertical_bias="0.0"
                app:spanCount="2"
                tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:listitem="@layout/book_layout" />

            <TextView
                android:id="@+id/tvShowAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_all"
                android:textStyle="bold"
                android:textColor="@color/green"
                android:textSize="20sp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvYourInterest"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.search.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/search_books"
        app:containerColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSearchResults"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="8dp"
            android:clipToPadding="false" />

    </com.google.android.material.search.SearchView>

</androidx.constraintlayout.widget.ConstraintLayout>
